make testenv more modular